<resources>
    <string name="app_name">Relay</string>

    <!-- General -->
    <!-- Alert shown to user when the device is offline -->
    <string name="alert_offline_body">You appear to be offline.</string>
    <!-- Dismiss action for Snack bar, Dialog etc -->
    <string name="action_dismiss">Dismiss</string>
    <!-- Default error message shown whenever the app catches FirebaseFirestoreException-->
    <string name="default_firebase_ex_msg">There is an issue with Firebase</string>
    <!--  Shown in a dialog to the user when the device seems to be offline -->
    <string name="default_network_not_found_msg">Not able to each the Network. Please make sure you are connected to the Internet</string>
    <!-- Text inside a dialog that-->
    <string name="unsupported_action_sending_message">Sending messages from the child device\'s number will be supported in the upcoming version. Stay tuned!</string>

    <!-- General Image Descriptions -->
    <!-- Image description for search icon -->
    <string name="image_description_search">Search</string>
    <!-- Image description for account icon -->
    <string name="image_description_account">Account</string>
    <!-- Image description for pair icon -->
    <string name="image_description_pair_parent">Pair with Parent</string>
    <!-- Image description for pair icon -->
    <string name="image_description_pair_child">Pair with Child</string>
    <!-- Image description for app logo -->
    <string name="image_description_app_logo">App Logo</string>
    <!-- Image description for an icon that indicates where the message has been synced or not  -->
    <string name="image_description_sync_status_logo">Message sync status</string>
    <!-- Image description for back icon. Clicking on this takes user to previous screen -->
    <string name="image_description_go_back">Back</string>
    <!-- Image description for close icon. Clicking on this closes current screen, search field etc -->
    <string name="image_description_close">Close</string>
    <!-- Image description for user profile pic or an icon -->
    <string name="image_description_user">User</string>
    <!-- Image description for up button icon. Clicking on this scrolls to top of the list -->
    <string name="image_description_scroll_to_top">Scroll To Top</string>

    <!-- Shown to user inside a dialog or a text label when the app needs the permissions -->
    <string name="permission_rationale_sms_read_send">Grant the permission to read and send
        SMS so that the app can relay them to the parent user.
        \n(All the sent messages are encrypted)
    </string>
    <!-- Verb. Positive action button in a dialog
         NOTE: If OK is lower cased to Ok, lint gives a warning that it needs to be OK -->
    <string name="ok">OK</string>
    <!-- Verb. Negative action button in a dialog -->
    <string name="cancel">Cancel</string>
    <!-- Text shown in a button. When user clicks on it, app requests OS to grant permissions -->
    <string name="grant_permissions">Grant Permissions</string>
    <!-- Message shown on the screen when no sender address is found -->
    <string name="msg_no_sender">Oops! No sender address found. Please go back</string>
    <!-- Generic error message shown when we don't know the reason -->
    <string name="general_error_message">Oops! Something went wrong. Please contact admin.</string>

    <!-- Main Screen -->
    <!-- Click label that describes what clicking on the particular item does. Used for accessibility -->
    <string name="click_label_thread">Opens the thread to see all messages</string>

    <!-- MessagesFrom Screen -->
    <!-- Content description for icon or image that when user clicks sends messages -->
    <string name="description_send_message">Send Message</string>
    <!-- Click label for accessibility purposes. The accessibility service would read this aloud -->
    <string name="click_label_sends_message">Sends message</string>

    <!-- Navigation Item -->
    <!-- Noun. Show in side navigation drawer -->
    <string name="nav_item_account">Account</string>
    <!-- Shown in side navigation drawer -->
    <string name="nav_item_pair_parent">Pair with Parent</string>
    <!-- Shown in side navigation drawer -->
    <string name="nav_item_pair_child">Pair with Child</string>
    <!-- Shown in side navigation drawer -->
    <string name="nav_item_child_user">Child Users</string>
    <!-- Shown in side navigation drawer -->
    <string name="nav_item_enc_key">Share Encryption Key</string>

    <!-- AccountsScreen -->
    <!-- Title used for an screen -->
    <string name="screen_title_account">Account</string>
    <!-- Noun. Label for a text field where user can input their name -->
    <string name="text_field_label_name">Name</string>
    <!-- Noun. Label for a text field where user can input their phone -->
    <string name="text_field_label_phone">Phone</string>
    <!-- Noun. Label for a text field where user can enter password -->
    <string name="text_field_label_password">Password</string>
    <!-- Noun. Label for a text field where user can enter an encryption key -->
    <string name="text_field_label_enc_key">Encryption Key</string>
    <!-- Supporting Text shown below text field. Can take multiple lines-->
    <string name="enc_key_supporting_text">This key is used to encrypt messages before sending them to the server. This key is stored on your device only.</string>
    <!-- Label for a button. Click on it creates an account for the user -->
    <string name="button_label_create_account">Create</string>
    <!-- Label for a button. Clicking on it updates account info of the user -->
    <string name="button_label_update">Update</string>
    <!-- Error message shown below the Phone text field when the phone entered is already used-->
    <string name="account_phone_registered">Phone already exits.</string>
    <!-- Error message shown below the Name text field -->
    <string name="account_invalid_name">Name is invalid.</string>
    <!-- Error message shown below the Phone number text field -->
    <string name="account_invalid_phone">Phone number is invalid.</string>
    <!-- Error message shown below the Password number text field -->
    <string name="account_invalid_password">Password should be %1$s characters long, have at least %2$s letter/s and %3$s number/s.</string>
    <!-- Error message shown below the Encryption Key text field -->
    <string name="account_invalid_enc_key">Encryption key needs to be at least %1$s characters long.</string>
    <!-- Error message show in a dialog when app fails to create -->
    <string name="account_user_create_failed">Failed to create user at this time. Please try again later.</string>
    <!-- Error message show in a dialog when app fails to update -->
    <string name="account_user_update_failed">Failed to update at this time. Please try again later.</string>
    <!-- Message shown in a dialog when the account is not verified -->
    <string name="account_verification_dialog_message">We will verify your number shortly. You can continue to use the app until then.</string>
    <!-- Image description for delete button icon. Clicking on this deletes user account -->
    <string name="account_image_description_delete">Delete Account</string>
    <!-- Message shown in a dialog when user clicks on the delete icon -->
    <string name="account_message_deletion_feature">Support for account deletion will be added soon.</string>

    <!-- PairWithParentScreen -->
    <!-- Title of the screen -->
    <string name="screen_title_pair">Pair</string>
    <!-- Hint for TextField where user can enter phone number -->
    <string name="pair_screen_parent_phone_number">Parent Phone Number</string>
    <!-- Supporting text should underneath the TextField. -->
    <string name="pair_screen_parent_phone_number_supporting_text">Enter phone number of the parent to pair with.</string>
    <!-- Verb. Text in a button. When clicked, app starts the process of pairing -->
    <string name="pair_screen_pair">Pair</string>
    <!-- Verb. Text in a button. When clicked, app starts the process of unpairing -->
    <string name="pair_screen_un_pair">Unpair</string>
    <!-- Error message shown when pairing fails -->
    <string name="pair_screen_pair_failed">Failed to pair. Please try again</string>
    <!-- Error message shown when unpairing fails -->
    <string name="pair_screen_unpair_failed">Failed to unpair. Please try again</string>
    <!-- Error message shown when user with that phone number is not found -->
    <string name="pair_screen_user_phone_not_found">User with this phone is not found.</string>
    <!-- Error message shown when user has reached maximum allowed devices to pair -->
    <string name="pair_screen_max_limit_reached">You have already paired with maximum allowed users.</string>
    <!-- Title for a list that show paired user's phone -->
    <string name="pair_screen_paired_users">Paired Users</string>

    <!-- ChildUserListScreen -->
    <!-- Title of the screen -->
    <string name="child_user_screen_title">Child Users</string>
    <!-- Description for child user menu icon shown in side navigation -->
    <string name="image_description_child_user_icon">Child User Icon</string>
    <!-- Text shown inside a dialog -->
    <string name="child_user_screen_notification_permission">Allow us to send you notifications.
        This way, you get notified whenever there are new messages from the Child User.</string>
    <!-- Text shown in a button. -->
    <string name="child_user_screen_scan_qr_code">Scan QR code</string>
    <!-- Message shown in the screen when there is not child users-->
    <string name="child_user_screen_no_child_message">You don\'t have any child users.
        \n\nPlease pair yourself as a parent user from child user\'s device to see them here.</string>

    <!-- WelcomeScreen-->
    <!-- Header of the welcome screen. Shown in a Text/Label -->
    <string name="welcome_screen_header">Welcome to %1$s!</string>
    <!-- Body of the welcome screen.-->
    <string name="welcome_screen_body">To get started with %1$s, just provide your phone number in the next screen.
        \n\nWe\'ll send a one-time passcode to your number. Enter the code, and you\'re good to go!</string>
    <!-- Text shown inside a button -->
    <string name="welcome_screen_create_account_btn">Create Account</string>

    <!-- Notification -->
    <!-- Title used for notification shown when uploading new messages -->
    <string name="notification_uploading_new_messages">Uploading new message</string>
    <!-- Title used for notification shown when a child user's key is wrong or obsolete -->
    <string name="notification_invalid_encryption_key">Encryption key for child user %1$s is missing, wrong or has expired. Please update it.</string>
    <!-- Channel name show in a text field from the OS. Most likely one line long only -->
    <string name="channel_name_critical_notification">Critical Notification</string>
    <!-- Channel name show in a text field from the OS. Most likely one line long only -->
    <string name="channel_name_message_upload_status">Message Upload Status</string>
    <!-- Channel name show in a text field from the OS. Most likely one line long only -->
    <string name="channel_name_new_message_notification">New Message Notification</string>

    <!-- AddChildEncryptionKeyByScanningQrCode Screen -->
    <!-- Title of a screen that allows user to scan barcode -->
    <string name="screen_add_child_enc_key_title">Scan QR code</string>
    <!-- Description of a screen that allows user to scan barcode -->
    <string name="screen_add_child_enc_key_scanning_description">Place QR code inside area, scanning will start automatically</string>
    <!-- Shown in TextField to the user when the app is processing a given barcode -->
    <string name="screen_add_child_enc_key_scanning_prompt_scanning">Scanning&#8230;</string>
    <!-- Shown in TextField to the user when the app has finished processing a given barcode -->
    <string name="screen_add_child_enc_key_scanning_prompt_scanning_complete">Scan complete</string>
    <!-- Error message shown in a TextField -->
    <string name="screen_add_child_enc_key_invalid_qr_code">Invalid QR code.</string>
    <!-- Error message shown in a TextField when user scans a QR code of user who hasn't added current user as parent -->
    <string name="screen_add_child_enc_key_not_added">%1$s has not added you as parent</string>
    <!-- Content description for an icon that starts the process of adding encryption key -->
    <string name="content_description_add_encryption_key">Add encryption key</string>
    <!-- Content description for an icon that indicates that the encryption key has been added -->
    <string name="content_description_encryption_key_added">Encryption key is added</string>

    <!-- App Update Screen -->
    <!-- Title for the screen to update the app -->
    <string name="screen_app_update_title">Update available</string>
    <!-- Body for the screen to update the app -->
    <string name="screen_app_update_body">To use this app, download the latest version.</string>
    <!-- Text for positive button for the screen to update the app -->
    <string name="screen_app_update_positive_btn">Update</string>

    <!-- Share Encryption Key Screen-->
    <!-- Body text shown in the screen-->
    <string name="share_enc_key_screen_body">Phone: %1$s \n\n</string>
</resources>